--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "1.2.1",
+  "version": "1.3.1",
   "description": "TestUtils",
   "main": "lib/index.js",
   "repository": {
@@ -29,28 +29,28 @@
   "devDependencies": {
     "@types/d3": "3.5.38",
     "@types/jasmine": "2.8.8",
+    "@types/jasmine-jquery": "1.5.32",
     "@types/jquery": "2.0.41",
     "@types/lodash": "4.14.30",
-    "@types/jasmine-jquery": "1.5.32",
     "coveralls": "3.0.1",
     "jasmine": "2.5.2",
-    "karma": "1.3.0",
+    "karma": "^3.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-jasmine": "1.1.2",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.0",
-    "powerbi-visuals-tools": "1.11.0",
+    "powerbi-visuals-tools": "^2.1.2",
     "puppeteer": "^1.5.0",
     "tslint": "4.4.2",
     "tslint-microsoft-contrib": "^4.0.1",
     "typescript": "2.1.4"
   },
   "dependencies": {
-    "jquery": "3.1.1",
+    "d3": "3.5.5",
     "jasmine-jquery": "2.1.1",
-    "lodash": "4.16.2",
-    "d3": "3.5.5"
+    "jquery": "3.1.1",
+    "lodash": "^4.17.11"
   }
 }
