--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "2.2.1",
+  "version": "2.3.0",
   "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -34,43 +34,41 @@
   },
   "devDependencies": {
     "@types/d3-timer": "1.0.9",
-    "@types/jasmine": "3.4.0",
-    "@types/jasmine-jquery": "1.5.33",
-    "@types/jquery": "3.3.31",
-    "@types/karma": "3.0.3",
-    "@types/node": "12.7.1",
-    "@types/webpack": "4.32.1",
-    "chalk": "2.4.2",
-    "coveralls": "3.0.6",
-    "jasmine": "3.4.0",
-    "jasmine-jquery": "2.1.1",
+    "@types/jasmine": "3.5.11",
+    "@types/jquery": "^3.5.0",
+    "@types/karma": "5.0.0",
+    "@types/node": "14.0.14",
+    "@types/webpack": "4.41.18",
+    "chalk": "4.1.0",
+    "coveralls": "3.1.0",
+    "jasmine": "3.5.0",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "1.1.2",
-    "karma-coverage-istanbul-reporter": "2.1.0",
-    "karma-jasmine": "2.0.1",
+    "karma-coverage": "2.0.2",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "3.3.1",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-typescript": "4.1.1",
+    "karma-typescript": "5.0.3",
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "4.0.2",
-    "powerbi-visuals-api": "2.6.1",
-    "puppeteer": "1.19.0",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tslint": "5.18.0",
+    "powerbi-visuals-api": "3.2.0",
+    "puppeteer": "4.0.1",
+    "ts-loader": "7.0.5",
+    "ts-node": "8.10.2",
+    "tslint": "6.1.2",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "3.5.3",
-    "webpack": "4.39.2",
+    "typescript": "3.9.5",
+    "webpack": "4.43.0",
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
-    "d3-array": "2.2.0",
-    "d3-timer": "1.0.9",
+    "d3-array": "2.4.0",
+    "d3-timer": "1.0.10",
     "istanbul-instrumenter-loader": "3.0.1",
-    "jquery": "3.5.0",
     "lodash-es": "4.17.15",
-    "snyk": "^1.342.2"
+    "snyk": "^1.349.0",
+    "uuidv4": "^6.1.1"
   },
   "snyk": true
 }
