Jquery '.each' upgrade and postinstall removed (#61)
* fix: package.json, package-lock.json & .snyk to reduce vulnerabilities

The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JS-JQUERY-565129
- https://snyk.io/vuln/SNYK-JS-JQUERY-567880


The following vulnerabilities are fixed with a Snyk patch:
- https://snyk.io/vuln/SNYK-JS-LODASH-567746

* npm audit fix and karma update

* .travis.yml removed

* github actions

* package update, changelog

* jquery and jquery-jasmine removed; TODO:REMOVE

* tested; JQuery3dClicks removed; comments removed;

* version & changelog upd

* jquery interfaces fix

* build workflow renamed

* docs removed

* createTouch fix

* readme guide line fixed

* packages updates, review fixes, JQuery | HTMLElement in interfaces

* uuid in testDom

* v2.3.1 jquery.each fix

* README: 2.3.0 migration note

Co-authored-by: snyk-bot <snyk-bot@snyk.io>
Co-authored-by: Nikita Grachev <v-grniki@microsoft.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -29,8 +29,7 @@
     "test": "karma start",
     "pretest": "npm run lint",
     "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\"",
-    "snyk-protect": "snyk protect",
-    "postinstall": "npm run snyk-protect"
+    "snyk-protect": "snyk protect"
   },
   "devDependencies": {
     "@types/d3-timer": "1.0.9",
@@ -54,6 +53,7 @@
     "karma-webpack": "4.0.2",
     "powerbi-visuals-api": "3.2.0",
     "puppeteer": "4.0.1",
+    "snyk": "^1.356.0",
     "ts-loader": "7.0.5",
     "ts-node": "8.10.2",
     "tslint": "6.1.2",
@@ -67,7 +67,6 @@
     "d3-timer": "1.0.10",
     "istanbul-instrumenter-loader": "3.0.1",
     "lodash-es": "4.17.15",
-    "snyk": "^1.349.0",
     "uuidv4": "^6.1.1"
   },
   "snyk": true
