--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "2.4.4",
+  "version": "2.4.5",
   "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -50,8 +50,7 @@
     "karma-typescript": "5.5.2",
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "5.0.0",
-    "powerbi-visuals-api": "~3.8.0",
-    "puppeteer": "^13.0.0",
+    "puppeteer": "^13.2.0",
     "snyk": "^1.790.0",
     "ts-loader": "9.2.6",
     "ts-node": "^10.4.0",
@@ -64,10 +63,10 @@
   "dependencies": {
     "d3-array": "3.1.1",
     "d3-timer": "3.0.1",
-    "istanbul-instrumenter-loader": "3.0.1",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "lodash-es": "4.17.21",
-    "powerbi-visuals-utils-typeutils": "^2.3.1",
-    "uuidv4": "^6.2.12"
+    "powerbi-visuals-api": "^4.2.0",
+    "powerbi-visuals-utils-typeutils": "^2.3.1"
   },
   "snyk": true
 }
